# OrbitalEncountersLobby

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  OrbitalEncountersLobby.sln  OrbitalEncountersLobby.vcxproj  OrbitalEncountersLobby.vcxproj.filters  README.md  conanfile.txt
Client/: CMakeLists.txt  Client.vcxproj  main.cpp
doc/: Doxyfile  documentation.hpp
include/OrbitalEncounters/: Application.hpp  Session.hpp  SessionManager.hpp
include/OrbitalEncounters/Core/: Log.hpp  MessageQueue.hpp  Service.hpp  ServiceLocator.hpp  Singleton.hpp  ThreadGroup.hpp  ThreadPool.hpp
include/OrbitalEncounters/Lobby/: Lobby.hpp  Room.hpp
include/OrbitalEncounters/Messages/: ConnectivityTestDone.hpp  CreateRoom.hpp  EmptyRoom.hpp  GameStart.hpp  JoinRoom.hpp  Message.hpp  PlayerLeaving.hpp  RoomIsAlive.hpp  RoomListRequested.hpp  SessionDisconnected.hpp  SessionIsAlive.hpp  SocketAccepted.hpp
include/OrbitalEncounters/Network/: Packet.hpp  Packets.hpp  Session.hpp  SessionManager.hpp  SocketListener.hpp
include/OrbitalEncounters/Utility/: Split.hpp
src/: Application.cpp  CMakeLists.txt  Session.cpp  SessionManager.cpp  main.cpp
src/Core/: Log.cpp  MessageQueue.cpp  Service.cpp  ServiceLocator.cpp  ThreadGroup.cpp  ThreadPool.cpp
src/Lobby/: Lobby.cpp  Room.cpp
src/Network/: Session.cpp  SessionManager.cpp  SocketListener.cpp
